qca2-plugin-ossl (2.0.0~beta3-1) UNRELEASED; urgency=low

  * New upstream release.

  [ Matthew Rosewarne ]
  * Tweak package description.
  * Add Homepage: to control.
  * Add watch file.

  [ Felix Geyer ]
  * Switch to source format 3.0 (quilt).
    - Turn changes from the last revision into a proper patch:
      remove_whirlpool_algo.diff

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 29 May 2011 23:15:26 +0200

qca2-plugin-ossl (0.1~20070904-4) unstable; urgency=low

  * Fix compilation with OpenSSL >= 0.9.8i (Closes: Bug#533970)
    (Upstream patch downloaded from
     http://websvn.kde.org/trunk/kdesupport/qca/plugins/qca-ossl/qca-ossl.cpp?r1=848615&r2=864423&view=patch)

 -- Jan Niehusmann <jan@debian.org>  Sun, 21 Jun 2009 20:02:15 +0200

qca2-plugin-ossl (0.1~20070904-3) unstable; urgency=low

  * Upload to unstable

 -- Jan Niehusmann <jan@debian.org>  Sat, 27 Oct 2007 19:05:31 +0200

qca2-plugin-ossl (0.1~20070904-2) experimental; urgency=low

  * Use qmake.mk instead of makefile.mk (Closes: Bug#445942)

 -- Jan Niehusmann <jan@debian.org>  Tue, 09 Oct 2007 18:58:36 +0200

qca2-plugin-ossl (0.1~20070904-1) experimental; urgency=low

  * New upstream release

 -- Jan Niehusmann <jan@debian.org>  Sun, 07 Oct 2007 15:29:06 +0200

qca2-plugin-ossl (0.1~20070706-1) experimental; urgency=low

  * Initial release
  * Closes: Bug#435693

 -- Jan Niehusmann <jan@debian.org>  Mon, 06 Aug 2007 11:40:02 +0200
