@@ -11,6 +11,7 @@ qca2-plugin-ossl (2.0.0~beta3-1) UNRELEASED; urgency=low
   * Switch to source format 3.0 (quilt).
     - Turn changes from the last revision into a proper patch:
       remove_whirlpool_algo.diff
+  * Switch debian/rules engine to dhmk.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 29 May 2011 23:15:26 +0200
 
